# NavigationDemo

./: .editorconfig  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/navigation/: FakeNavigationEngine.kt
app/src/androidTest/java/com/example/navigation/domain/repository/: FakeNavigationRepository.kt
app/src/androidTest/java/com/example/navigation/viewmodels/: NavigationViewModelTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: lauttasaari_roads.osm
app/src/main/cpp/: CMakeLists.txt  location_filter.cpp  location_filter.h  navigation_engine.cpp  navigation_engine.h  osm_parser.cpp  osm_parser.h  road_graph.cpp  road_graph.h  route_matcher.cpp  route_matcher.h  routing_engine.cpp  routing_engine.h
app/src/main/java/com/example/navigation/: MainActivity.kt  NavigationApp.kt  NavigationEngine.kt
app/src/main/java/com/example/navigation/di/: AppModule.kt
app/src/main/java/com/example/navigation/domain/models/: Location.kt  Route.kt  RouteMatch.kt
app/src/main/java/com/example/navigation/domain/repository/: NavigationRepository.kt
app/src/main/java/com/example/navigation/interfaces/: NavigationEngineInterface.kt  NavigationRepositoryInterface.kt
app/src/main/java/com/example/navigation/utils/: FormatUtils.kt  LocationUtils.kt  NavigationSimulator.kt
app/src/main/java/com/example/navigation/viewmodels/: NavigationState.kt  NavigationViewModel.kt
app/src/main/res/drawable/: ic_car_marker.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
